# pytest

./: .gitignore  README.md  pyproject.toml  requirements.in  setup.py  tox.ini
tests/pytest_fixtures/: test_parameterize.py
tests/pytest_generate_tests/: conftest.py  test_pytest_generate.py  test_pytest_generate_tests_sample_code.py  test_pytest_generate_tests_web_app.py  web_app.py
tests/pytest_hooks/: conftest.py  test_example1.py  test_example2.py
