[build-system]
requires = ["setuptools", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruna_pytest"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools_scm]
version_file = "_version.py"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }